[gd_scene load_steps=13 format=2]

[ext_resource path="res://particle_plant/textures/plant_segment.png" type="Texture" id=1]
[ext_resource path="res://particle_plant/leaves/textures/plant_leaves.png" type="Texture" id=2]
[ext_resource path="res://particle_plant/ParticlePlant.gd" type="Script" id=3]
[ext_resource path="res://plant_root/PlantRoot.tscn" type="PackedScene" id=4]
[ext_resource path="res://plant_root/PlantMove.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="CanvasItemMaterial" id=5]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.748387, 0.883871 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 0.649902, 0.649902, 0.649902, 0.235294 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 200.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
angular_velocity = 15.0
angular_velocity_random = 1.0
orbit_velocity = 0.05
orbit_velocity_random = 1.0
radial_accel = 70.0
tangential_accel = 40.0
angle = 360.0
angle_random = 1.0
scale_random = 0.1
color_ramp = SubResource( 7 )
hue_variation = 0.1
hue_variation_random = 1.0
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;

uniform float timefactor = 1.0;
uniform vec2 amplitude = vec2(30.0, 20.0);

void vertex(){
	VERTEX.x += cos(TIME * timefactor + VERTEX.x + VERTEX.y) * amplitude.x;
	VERTEX.y += cos(TIME * timefactor + VERTEX.x + VERTEX.y) * amplitude.y;
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )
shader_param/timefactor = 1.0
shader_param/amplitude = Vector2( 30, 20 )

[node name="ParticlePlant" type="Area2D"]
modulate = Color( 0.372549, 0.866667, 0.615686, 1 )
script = ExtResource( 3 )
root_time = 0.8
move_speed = 2500.0
plant_root_scene = ExtResource( 4 )
plant_move_scene = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Trail" type="Particles2D" parent="."]
material = SubResource( 5 )
amount = 64
lifetime = 1.7
local_coords = false
draw_order = 1
process_material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="Body" type="Sprite" parent="."]
modulate = Color( 0.65098, 0.65098, 0.65098, 1 )
material = SubResource( 9 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="Leaves" type="Particles2D" parent="."]
material = SubResource( 5 )
amount = 256
lifetime = 1.7
draw_order = 1
process_material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="Roots" type="Node2D" parent="."]

[node name="Root1" type="Position2D" parent="Roots"]
position = Vector2( -128, -128 )

[node name="Root2" type="Position2D" parent="Roots"]
position = Vector2( 128, -128 )

[node name="Root3" type="Position2D" parent="Roots"]
position = Vector2( 128, 128 )

[node name="Root4" type="Position2D" parent="Roots"]
position = Vector2( -128, 128 )

[connection signal="body_exited" from="." to="." method="_on_ParticlePlant_body_exited"]
